[package]
name = "testproject"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.52"

[dependencies]
chrono = "0.4"
libc = "0.2"
syscall = "0.2.1"

[dependencies.clap]
version = "2.33"
features = ["yaml"]

[[bin]]
name = "touch"
path = "src/touch.rs"

[profile.release]
opt-level = "z"
debug = true
